Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-argo
  namespace: hello-argo
  labels:
    app: hello-argo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-argo
  template:
    metadata:
      labels:
        app: hello-argo
    spec:
      containers:
        - name: hello-argo
          image: inganyoyo/hello-devops-springboot:19
          ports:
            - containerPort: 8080
