Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-argo-service
  namespace: hello-argo
spec:
  type: LoadBalancer
  selector:
    app: hello-argo-deployment
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
